# nndp

./: .gitignore  README.md  pyproject.toml  pyproject_old.tomlfds  setup.py  setup_delete.py
docs/source/: conf.py  index.md  index.rst
docs/source/notebooks/cake_eating_problem/: main.ipynb  model.py
docs/source/notebooks/firm_dynamics/: main.ipynb  model.py
docs/source/notebooks/income_fluctuations/: main.ipynb  model.py  playground.ipynb
examples/income_fluctuations/: main.ipynb  model.py  simulation_results.csv
src/: policy_function.py  utils.py
src/nndp/: __init__.py  core.py  policy_function.py
src/nndp/agnostic/: __init__.py  analysis.py  model.py  policy.py  samplers.py  train.py
src/nndp/core/: __init__.py  neural_network.py  neural_networks.py  policy_function.py  train.py
